--- a/HTML/Basic/text.html
+++ b/HTML/Basic/text.html
@@ -16,13 +16,15 @@
     />
   </head>
   <body>
-    <h1>Talking Tech and AI with Google CEO Sundar Pichai!</h1>
-    <p>3.4M views &#183; 6 months ago</p>
-    <p>Marques Brownlee &#10003;</p>
-    <p>
-      Talking tech and AI on the heels of Google I/O. Also a daily driver phone
-      reveal from Google's CEO. Shout-out to Sundar!
-    </p>
+    <div id="yt" class="main-div">
+      <h1>Talking Tech and AI with Google CEO Sundar Pichai!</h1>
+      <p>3.4M views &#183; 6 months ago</p>
+      <p>Marques Brownlee &#10003;</p>
+      <p>
+        Talking tech and AI on the heels of Google I/O. Also a daily driver phone
+        reveal from Google's CEO. Shout-out to Sundar!
+      </p>
+    </div>
     <!--
       > Text elements
 
@@ -39,15 +41,17 @@
       - Helps with text decoration (not recommended usually as decor should be done using CSS)
 
     -->
-    <p class="apple-text">
+    <div id="stock" class="main-div">
+      <p id="price">1,049.61 <span>USD</span></p>
+      <p id="change">+18.05 (1.75%) today</p>
+      <p id="after-hours">
+        After hours 1048.00 <span id="after-hours-change">-1.61 (0.15%)</span>
+      </p>
+    </div>
+    <p id="apple-text">
       Shop early for the best selection of holiday favorites.
-      <span class="shop-link">Shop now &#62;</span>
+      <span>Shop now &#62;</span>
     </p>
 
-    <p class="price">1,049.61 <span class="currency">USD</span></p>
-    <p class="change">+18.05 (1.75%) today</p>
-    <p class="after-hours">
-      After hours 1048.00 <span class="after-hours-change">-1.61 (0.15%)</span>
-    </p>
   </body>
 </html>
