--- a/HTML/Basic/buttons.html
+++ b/HTML/Basic/buttons.html
@@ -8,22 +8,33 @@
     <link rel="stylesheet" href="styles/buttons.css" />
   </head>
   <body>
-    <button class="subscribe-button">SUBSCRIBE</button>
-    <button class="join-button">JOIN</button>
-    <button class="tweet-button">Tweet</button>
-    <button class="uber-button">Request now</button>
-    <button class="amazon-button">Add to Cart</button>
-    <button class="buy-button">Buy now</button>
-    <button class="github-button">Sign up</button>
-    <button class="get-started-button">Get Started</button>
-    <button class="download-button">Download</button>
-    <br />
-    <button class="apply-button">Apply on company website</button>
-    <button class="save-button">Save</button>
-    <button class="stretch-button">Stretch</button>
-    <button class="click-button">Click</button>
-    <button class="margin-stretch-button">One</button>
-    <button class="margin-stretch-button">Two</button>
-    <button class="margin-stretch-button">Three</button>
+    <button id="yt">SUBSCRIBE</button>
+    <div id="twitter">
+      <button id="join">JOIN</button>
+      <button id="tweet">Tweet</button>
+    </div>
+    <button id="uber">Request now</button>
+    <div id="amazon">
+      <button>Add to Cart</button>
+      <button>Buy now</button>
+    </div>
+    <button id="github">Sign up</button>
+    <div id="bootstrap">
+      <button>Get Started</button>
+      <button>Download</button>
+    </div>
+    <div id="linkedin">
+      <button>Apply on company website</button>
+      <button>Save</button>
+    </div>
+    <button class="green-btn" id="stretch">Stretch</button>
+    <div id="click">
+      <button class="green-btn">Click</button>
+    </div>
+    <div>
+      <button class="green-btn margin-stretch">One</button>
+      <button class="green-btn margin-stretch">Two</button>
+      <button class="green-btn margin-stretch">Three</button>
+    </div>
   </body>
 </html>
