--- a/Vanilla JS/1) Selecting DOM/index.html
+++ b/Vanilla JS/1) Selecting DOM/index.html
@@ -8,14 +8,14 @@
     <title>Item Lister</title>
   </head>
   <body>
-    <header id="main-header" class="bg-success">
-      <div class="container">
-        <h1 id="header-title">Item Lister</h1>
+    <header id="main-header">
+      <div id="header-title">
+        <h1>Item Lister</h1>
       </div>
     </header>
 
-    <div class="container">
-      <div id="main" class="card card-body">
+    <div>
+      <div id="main">
         <h2 class="title">Add Items</h2>
 
         <form class="form-inline">
@@ -23,13 +23,18 @@
           <input type="submit" class="btn" value="Submit" />
         </form>
 
-        <h2 class="title">Items</h2>
-
-        <ul id="items" class="list-group">
+        <h2 class="title">Item List 1</h2>
+        <ul id="items">
           <li class="list-group-item">Item 1</li>
           <li class="list-group-item">Item 2</li>
           <li class="list-group-item">Item 3</li>
-          <li class="list-group-item">Item 4</li>
+        </ul>
+        
+        <h2 class="title">Item List 2</h2>
+        <ul id="items">
+          <li class="list-group-item">Item 1</li>
+          <li class="list-group-item">Item 2</li>
+          <li class="list-group-item">Item 3</li>
         </ul>
       </div>
     </div>
@@ -37,7 +42,6 @@
     <!-- <script src="2-general-selection.js"></script> -->
     <!-- <script src="3-specific-selection.js"></script> -->
     <!-- <script src="4-css-pseudoclass-selection.js"></script> -->
-    <!-- <script src="5-relational-selection.js"></script> -->
-    <script src="./prac.js"></script>
+    <script src="5-relational-selection.js"></script>
   </body>
 </html>
