--- a/Vanilla JS/3) Manipulating DOM/index.html
+++ b/Vanilla JS/3) Manipulating DOM/index.html
@@ -8,28 +8,24 @@
     <title>Item Lister</title>
   </head>
   <body>
-    <header id="main-header" class="bg-success">
-      <div class="container">
-        <h1 id="header-title">Item Lister</h1>
-      </div>
-    </header>
-    <div class="container">
-      <div id="main" class="card card-body">
-        <h2 class="title">Add Items</h2>
-        <form class="form-inline">
-          <input type="password" class="form-control" value="Hello@123" />
-          <input type="button" class="btn" value="Submit" />
-        </form>
-        <h2 class="title">Items</h2>
-        <ul id="items" class="list-group">
-          <li class="list-group-item">Item 1</li>
-          <li class="list-group-item">Item 2</li>
-          <li class="list-group-item">Item 3</li>
-          <li class="list-group-item">Item 4</li>
-        </ul>
-      </div>
-    </div>
-    <script src="1-adding-elements.js"></script>
-    <script src="2-removing-elements.js"></script>
+    <header><h1>Item Lister</h1></header>
+
+    <main>
+      <h2>Add Items</h2>
+      <form>
+        <input type="text" />
+        <input type="submit" value="Submit" />
+      </form>
+
+      <h2>Items</h2>
+      <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+      </ul>
+    </main>
+
+    <script src="index.js"></script>
   </body>
 </html>
